--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -14,6 +14,6 @@ server {
 
     location / {
         include uwsgi_params;
-        uwsgi_pass pwnboard:5000
+        uwsgi_pass pwnboard:5000;
     }
 }
