--- a/app/statics/config.yml
+++ b/app/statics/config.yml
@@ -7,7 +7,7 @@ database:
   server: localhost
   port: 6379
 server:
-  host: http://pwnboard.local
+  host: localhost #http://pwnboard.local
   cache: false
   cache_time: 10
   logfile: pwnboard.log
