--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,8 +9,8 @@ server {
     listen 443 ssl default_server;
     server_name _;
 
-    ssl_certificate /etc/nginx/ssl/server.crt;
-    ssl_certificate_key /etc/nginx/ssl/server.key;
+    ssl_certificate /app/ssl/server.crt;
+    ssl_certificate_key /app/ssl/server.key;
 
     location / {
         include uwsgi_params;
